{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 10,
  "lineage": "b4df8b06-776b-5ecc-b1b4-4c418270586a",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_proxy_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:077753290574:instance/i-0756087fb6ad2c190",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0756087fb6ad2c190",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0abf4dd03f0474295",
            "private_dns": "ip-10-0-0-99.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.99",
            "public_ip": "3.87.147.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d4f9664c3d52d17d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d036d048215ef947",
            "tags": {
              "Name": "Terraform Proxy_A"
            },
            "tags_all": {
              "Name": "Terraform Proxy_A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-079bf12d40fea10ec"
            ]
          },
          "dependencies": [
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_proxy_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:077753290574:instance/i-001317e0341eb791e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001317e0341eb791e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05a011e296c258391",
            "private_dns": "ip-10-0-0-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.178",
            "public_ip": "54.242.165.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ebfd175eead728e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d036d048215ef947",
            "tags": {
              "Name": "Terraform Proxy_B"
            },
            "tags_all": {
              "Name": "Terraform Proxy_B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-079bf12d40fea10ec"
            ]
          },
          "dependencies": [
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_proxy_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d3b3274b6c5d4aa",
            "arn": "arn:aws:ec2:us-east-1:077753290574:instance/i-0efd9e3d6d1580a76",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efd9e3d6d1580a76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-036c06802458ad6ce",
            "private_dns": "ip-10-0-0-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.83",
            "public_ip": "18.207.119.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0319c7c1bdfe8cc82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d036d048215ef947",
            "tags": {
              "Name": "Terraform Proxy_C"
            },
            "tags_all": {
              "Name": "Terraform Proxy_C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-079bf12d40fea10ec"
            ]
          },
          "dependencies": [
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:internet-gateway/igw-025d1c6f67d74c0a2",
            "id": "igw-025d1c6f67d74c0a2",
            "owner_id": "077753290574",
            "tags": {
              "Name": "Terraform Internet Gateway"
            },
            "tags_all": {
              "Name": "Terraform Internet Gateway"
            },
            "vpc_id": "vpc-0bccdfcd039c1cca9"
          },
          "dependencies": [
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:route-table/rtb-0def3c91a423ff0f1",
            "id": "rtb-0def3c91a423ff0f1",
            "owner_id": "077753290574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025d1c6f67d74c0a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform Public Route Table"
            },
            "tags_all": {
              "Name": "Terraform Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bccdfcd039c1cca9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_public_route_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b991b0b3226df91",
            "route_table_id": "rtb-0def3c91a423ff0f1",
            "subnet_id": "subnet-0d036d048215ef947"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:subnet/subnet-0d036d048215ef947",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d036d048215ef947",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077753290574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform Public Subnet A"
            },
            "tags_all": {
              "Name": "Terraform Public Subnet A"
            },
            "vpc_id": "vpc-0bccdfcd039c1cca9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:security-group/sg-079bf12d40fea10ec",
            "description": "Allow HTTP and SSH Inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079bf12d40fea10ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow HTTP and SSH Inbound",
            "name_prefix": "",
            "owner_id": "077753290574",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bccdfcd039c1cca9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:vpc/vpc-0bccdfcd039c1cca9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e75c9b108029a43d",
            "default_route_table_id": "rtb-032080f87140bdde7",
            "default_security_group_id": "sg-0d73198ee8a937525",
            "dhcp_options_id": "dopt-08724184f5b3ce736",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bccdfcd039c1cca9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032080f87140bdde7",
            "owner_id": "077753290574",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            }
          }
        }
      ]
    }
  ]
}